fix: Remove image.png from Git tracking to resolve HF Spaces sync
- Git에서 image.png 추적 제거 (--cached로 로컬 파일은 유지)
- .gitignore에 image.png 추가하여 향후 추적 방지
- 이미 Git 히스토리에 있던 바이너리 파일로 인한 HF Spaces 동기화 오류 해결

--- a/.gitignore
+++ b/.gitignore
@@ -152,4 +152,7 @@ flagged/
 # API Keys and secrets
 *api_key*
 *secret*
-*token* 
+*token*
+
+# Documentation images (GitHub only, not for HF Spaces)
+image.png 
