feat: Use Git LFS for image.png to resolve HF Spaces sync
- Git LFS 설치 및 PNG 파일 추적 설정
- .gitattributes에 *.png LFS 추적 설정 추가
- image.png를 Git LFS로 다시 추가하여 바이너리 파일 문제 해결
- Hugging Face Spaces와의 동기화 오류 해결

--- a/.gitignore
+++ b/.gitignore
@@ -154,5 +154,5 @@ flagged/
 *secret*
 *token*
 
-# Documentation images (GitHub only, not for HF Spaces)
-image.png 
+# Documentation images (now handled by Git LFS)
+# image.png 
