feat: 강화된 연구 자료 보호 및 라이선스 체계 구축
🔒 연구 자료 법적 보호 강화:
- README.md에 민감한 연구 자료 사용 제한 조항 추가
- 이중 라이선스 체계: 앱 코드(오픈) + 연구 자료(기밀)
- 무단 복제, 상업적 사용 엄격 금지 명시

📄 법적 문서 추가:
- LICENSE 파일: 상세한 라이선스 조항 및 법적 보호
- prompts/README_CONFIDENTIAL.md: AI 프롬프트 보호 안내
- references/README_CONFIDENTIAL.md: UX 평가 기준 보호 안내

⚖️ 지적재산권 보호:
- Copyright 및 Trade Secret 보호 조항
- 위반 시 법적 조치 명시
- 연구팀 연락처 및 허가 절차 안내

--- a/.gitignore
+++ b/.gitignore
@@ -155,4 +155,7 @@ flagged/
 *token*
 
 # Documentation images (now handled by Git LFS)
-# image.png 
+# image.png
+
+# 🔒 민감한 연구 자료는 유지하되 GitHub에서 대중 공개는 제한
+# (Hugging Face 동기화용으로는 필요함) 
